--- a/travel-story/package.json
+++ b/travel-story/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.2",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
